fixed header text on mobile

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -107,8 +107,8 @@
 
     .index-header .wrapper{
         .circle-text{
-            width: 53px;
-            top: 45px;
+            width: 60px;
+            top: 55px;
             left: 25px;
         }   
     }
@@ -159,7 +159,7 @@
     }
 
     h1{
-        font-size: 38px;
+        font-size: 36px;
     }
     
     h2 {
@@ -172,8 +172,8 @@
 
     .index-header .wrapper {
         .circle-text {
-            width: 50px;
-            top: 30px;
+            width: 55px;
+            top: 50px;
             left: 15px;
         }
     }
