--- a/styles/styles.css
+++ b/styles/styles.css
@@ -818,8 +818,8 @@ form input#name {
     font-size: 60px;
   }
   .index-header .wrapper .circle-text {
-    width: 53px;
-    top: 45px;
+    width: 60px;
+    top: 55px;
     left: 25px;
   }
   .journey .wrapper {
@@ -869,7 +869,7 @@ form input#name {
     height: 25vh;
   }
   h1 {
-    font-size: 38px;
+    font-size: 36px;
   }
   h2 {
     font-size: 29px;
@@ -878,8 +878,8 @@ form input#name {
     font-size: 26px;
   }
   .index-header .wrapper .circle-text {
-    width: 50px;
-    top: 30px;
+    width: 55px;
+    top: 50px;
     left: 15px;
   }
   .sections {
